--- a/frontend/src/pages/Auth/Navigation.css
+++ b/frontend/src/pages/Auth/Navigation.css
@@ -13,7 +13,7 @@
 	transition: opacity 0.2s ease-in-out;
 }
 
-#navigation-container:hover {
+#navigation-container:hover .nav-item-name {
 	display: block;
 	opacity: 1;
 }
